@@ -1,3 +1,9 @@
+2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs,
+	  MonoDevelop.AddinAuthoring/AddinProjectExtension.cs,
+	  MonoDevelop.AddinAuthoring/AddinData.cs: Track API.
+
 2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.AddinAuthoring.mdp: Updated projects.
